fixed card images and spacing

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h1 {
 }
 
 section {
-  padding: 10rem 3rem 7rem 0;
+  padding-top: 7rem;
   width: 100vw;
 }
 
@@ -92,18 +92,18 @@ section.content {
 
 section.about-container {
   width: 100vw;
-  padding: 10rem 3rem 7rem 0;
+  /* padding: 10rem 3rem 7rem 0; */
   /* color: #000; */
   font-family: 'Lato', sans-serif;
   font-size: 20px;
 }
 
 section.contact-container {
-  padding: 10rem 0 7rem 0;
+  /* padding: 10rem 0 7rem 0; */
 }
 
 section.contact-container h1 {
-  padding-bottom: 3rem;
+  /* padding-bottom: 3rem; */
 }
 
 
@@ -134,7 +134,7 @@ section.contact-container h1 {
 }
 
  .contact-container {
-  padding-top: 3rem;
+  /* padding-top: 3rem; */
 }
 
 .card {
@@ -150,11 +150,12 @@ section.contact-container h1 {
 }        
 
 .thumbnail {
-  width: 350px;
-  height: 225px;
+  width: 100%;
+  object-fit: cover;
   border-radius: 3px;
   border: solid #606763 1px;
   box-shadow: 0 0 50px #4c504e;
+  margin: auto;
 }
 
 .footer {
@@ -179,7 +180,7 @@ section.contact-container h1 {
   }
 
   section.about-container {
-  padding: 8rem 3rem 7rem 3rem;
+  /* padding: 8rem 3rem 7rem 3rem; */
   }
 
   .projects-container .card {
